--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="count"> <a href="/cart"><%=cart.length%></a></div>
 <div class="container">
 
     <div class="page-header text-center">
@@ -25,26 +27,24 @@
         <div class="col-sm-6">
           <h3> Create your Wishlist Down Below</h3>
           <ul class="messages">
-          <% for(var i=0; i<messages.length; i++) {%>
+          <% for(var i=0; i<jewelry.length; i++) {%>
             <li class="message">
-              <span><%= messages[i].item %></span>
-              <span><%= messages[i].store %></span>
-              <span><%= messages[i].price %></span>
-              <button class="delete" value="<%= messages[i]._id%>">X</button>
+              <form action="/add" method="post">
+              <input name="title" value="<%= jewelry[i].title %>" readonly>
+              <input name="price" value="$<%= jewelry[i].price %>" readonly>
+              <input name="description" value="<%= jewelry[i].description %>" readonly> 
+              <div>
+              <% for(var s = 0; s < jewelry[i].rating; s++) {%>
+                <span>⭐️</span>
+              <%} %>
+              </div>
+              <button class="add" type="submit"> 🛒 </button> 
+            </form>
+
             </li>
           <% } %>
           </ul>
 
-          <h2> Add Items to Wishlist</h2>
-        <!-- <% if (user.local.email) { %> -->
-          <form action="/messages" method="POST">
-            <input type="text" placeholder="title" name="item">
-            <input type="text" placeholder="store" name="store">
-            <input type="number" placeholder="$" name="price">
-            <button type="submit"> submit</button>
-          </form>
-        </div>
-        <% } %>
 
 </div>
 
